# yini-test

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  YINI-Specification-temp.md  pyproject.toml
.github/workflows/: run-tests-fast.yml  run-tests-matrix.yml
cases/golden/lenient/invalid/parser-mode/: yini-strict-in-lenient-mode.yini
cases/golden/lenient/valid/basics/: basic-section.json
cases/golden/strict/invalid/parser-mode/: yini-lenient-in-strict-mode.yini
cases/golden/strict/invalid/strict-mode/: missing-document-terminator.yini
cases/golden/strict/valid/basics/: basic-strict.json  basic-strict.yini
cases/smoke/: README.md
cases/smoke/lenient/invalid/: 2-malformed-list.yini  3-malformed-inline-object.yini
cases/smoke/lenient/valid/: 1-minimal.json  1-minimal.yini  2-basic-config.json  2-basic-config.yini  3-nested-sections.yini  5-comments-and-whitespace.yini  6-practical-config.yini  7-multiple-top-level-sections.yini
cases/smoke/strict/invalid/: 3-multiple-top-level-sections.strict.yini
cases/smoke/strict/valid/: 3-lists.strict.yini  4-inline-objects.strict.yini  5-nested-sections.strict.yini
docs/: adapter-contract.md  case-contract.md  runner-flow.md
src/yini_test/: __init__.py  __main__.py  adapters.py  cli.py  diffing.py  discovery.py  expectations.py  models.py  runner.py  runner.py.old
src/yini_test/cases/: manifest.json
src/yini_test/cases/golden/: README.md
src/yini_test/utils/: __init__.py  executables.py  formatting.py
tests/: README.md  test_cli.py  test_runner.py  test_utils.py
(+279 files in other folders)
